Fix ESLINT, Pref: .env

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,21 @@
-DB_URI=""
-AMQP_URI=""
-EMAIL_HOST=""
-EMAIL_PORT=
-EMAIL_ID=""
-EMAIL_PASS=""
+APP_NAME="NestJS Users Web Service"
+APP_ENV=local
+APP_DEBUG=true
+APP_URL=http://localhost:300
+
+DB_URL=""
+
+REDIS_URL=""
+
+MAIL_HOST=""
+MAIL_PORT=
+MAIL_IGNORE_TLS=true
+MAIL_SECURE=false
+MAIL_USERNAME=""
+MAIL_PASSWORD=""
+MAIL_FROM_ADDRESS=""
+MAIL_FROM_NAME=""
+
 RMQ_PRODUCER_QUEUE=""
 RMQ_PRODUCER_URL=""
 RMQ_PRODUCER_QUEUE_DURABLE=false
